--- a/home.css
+++ b/home.css
@@ -3,8 +3,15 @@
   src: url('./fonts/Yellowtail-Regular.ttf');
 }
 
+body {
+  width: 100%;
+  height: 100%;
+  margin: 0;
+  padding: 0;
+}
 .top-container {
   background-color: #0B4619;
+  width: 100%;
   height: 100%;
   text-align: center;
   font-size: 100px;
@@ -14,9 +21,19 @@
 }
 
 .header {
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  height: 80px;
   padding: 0px;
-  background: #555;
-  color: #f1f1f1;
+  background: #FFCC1D;
+  color: #229E09;
+  font-size: 25px;
+  text-decoration: none;
+}
+
+#img1 {
+  margin: 5px;
 }
 
 .content {
