--- a/home.css
+++ b/home.css
@@ -10,7 +10,8 @@ body {
   padding: 0;
 }
 .top-container {
-  background-color: #0B4619;
+  background: radial-gradient(ellipse at center, #0B4619 45%, #000000 100%);
+
   width: 100%;
   height: 100%;
   text-align: center;
@@ -34,6 +35,7 @@ body {
 
 #img1 {
   margin: 5px;
+  width: 80px;
 }
 
 .content {
