--- a/home.css
+++ b/home.css
@@ -8,50 +8,74 @@ body {
   height: 100%;
   margin: 0;
   padding: 0;
-}
-.top-container {
-  background: radial-gradient(ellipse at center, #0B4619 45%, #000000 100%);
-
-  width: 100%;
-  height: 100%;
-  text-align: center;
-  font-size: 100px;
-  font-family: Yellowtail;
-  color: #E8E8CC;
-  animation:tracking-in-expand 1s linear both
+  background: #E1FFEE;
 }
 
 .header {
-  display: flex;
-  align-items: center;
-  justify-content: flex-start;
-  height: 80px;
-  padding: 0px;
-  background: #FFCC1D;
-  color: #229E09;
-  font-size: 25px;
+  overflow: hidden;
+  position: fixed;
+  top: 0;
+  width: 100%;
+  background: #E1FFEE;
+}
+
+.header a {
+  float: right;
+  display: block;
+  color: #277BC0;
+  text-align: center;
+  padding: 14px 16px;
   text-decoration: none;
+  font-size: 15px;
+  font-weight: bold
+}
+
+.welcome {
+  background-color: #277BC0;
 }
 
 #img1 {
   margin: 5px;
   width: 80px;
+  height: 80px;
 }
 
-.content {
-  padding: 16px;
+h1 {
+  animation:tracking-in-expand 1s linear both;
+  font-family: Yellowtail;
+  font-size: 80px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: #FFB200;
 }
 
-.sticky {
-  position: fixed;
-  top: 0;
-  width: 100%;
+.welcomeText {
+  font-size: 25px;
+  padding: 10px;
+  margin: 10px;
+  font-weight: bold;
+  backdrop-filter: blur(16px) saturate(180%);
+  -webkit-backdrop-filter: blur(16px) saturate(180%);
+  background-color: rgba(39, 123, 192, 0.75);
+  border-radius: 12px;
+  border: 1px solid rgba(209, 213, 219, 0.3);
 }
 
-.sticky + .content {
-  padding-top: 102px;
-}
+.homeMenu {
+  display: grid;
+  gap: 10px;
+  grid-template-columns: auto auto auto;
+  padding: 20px;
+  }
 
+.menuText {
+  background-color: rgba(255, 255, 255, 0.8);
+  border: 1px solid rgba(0, 0, 0, 0.8);
+  padding: 20px;
+  font-size: 30px;
+  text-align: center;
+}
 
 @keyframes tracking-in-expand{
   0%{letter-spacing:-.2em;opacity:0}
