--- a/home.css
+++ b/home.css
@@ -30,6 +30,11 @@ body {
   font-weight: bold
 }
 
+.header a:hover {
+  background: #277BC0;
+  color: #FFB200;
+}
+
 .welcome {
   background-color: #277BC0;
 }
@@ -55,11 +60,12 @@ h1 {
   padding: 10px;
   margin: 10px;
   font-weight: bold;
-  backdrop-filter: blur(16px) saturate(180%);
-  -webkit-backdrop-filter: blur(16px) saturate(180%);
-  background-color: rgba(39, 123, 192, 0.75);
-  border-radius: 12px;
-  border: 1px solid rgba(209, 213, 219, 0.3);
+  color: #FFF4CF;
+  backdrop-filter: blur(14px) saturate(200%);
+    -webkit-backdrop-filter: blur(14px) saturate(200%);
+    background-color: rgba(39, 123, 192, 1);
+    border-radius: 12px;
+    border: 1px solid rgba(209, 213, 219, 0.3);
 }
 
 .homeMenu {
@@ -70,12 +76,30 @@ h1 {
   }
 
 .menuText {
-  background-color: rgba(255, 255, 255, 0.8);
-  border: 1px solid rgba(0, 0, 0, 0.8);
   padding: 20px;
   font-size: 30px;
   text-align: center;
+  color: #FFF4CF;
+  backdrop-filter: blur(16px) saturate(180%);
+  -webkit-backdrop-filter: blur(16px) saturate(180%);
+  background-color: rgba(39, 123, 192, 0.75);
+  border-radius: 12px;
+  border: 1px solid rgba(209, 213, 219, 0.3);
 }
+
+.button {
+  background: #FFB200;
+  color: #277BC0;
+  font-size: 25px;
+}
+
+@media only screen and ( max-width : 900px ) {
+
+  
+
+
+}
+
 
 @keyframes tracking-in-expand{
   0%{letter-spacing:-.2em;opacity:0}
