--- a/home.css
+++ b/home.css
@@ -37,6 +37,7 @@ body {
 
 .welcome {
   background-color: #277BC0;
+  display: block;
 }
 
 #img1 {
@@ -94,9 +95,6 @@ h1 {
 }
 
 @media only screen and ( max-width : 900px ) {
-
-  
-
 
 }
 
