--- a/ofertas.css
+++ b/ofertas.css
@@ -58,15 +58,10 @@ body {
     border: 1px solid rgba(209, 213, 219, 0.3);
 }
 
-.homeSection {
-  display: flex;
-  flex-direction: column;
-}
-
 .homeMenu {
   display: grid;
   gap: 10px;
-  grid-template-columns: auto auto ;
+  grid-template-columns: auto auto auto;
   padding: 20px;
   }
 
