--- a/home.css
+++ b/home.css
@@ -1,104 +1,152 @@
 @font-face {
   font-family: Yellowtail;
-  src: url('./fonts/Yellowtail-Regular.ttf');
+  src: url('./fonts/Italiana-Regular.ttf');
 }
-
+ 
 body {
   width: 100%;
   height: 100%;
   margin: 0;
   padding: 0;
-  background: #E1FFEE;
+  background: #91D6D3;
 }
-
+ 
 .header {
   overflow: hidden;
-  position: fixed;
+  position: absolute;
   top: 0;
   width: 100%;
-  background: #E1FFEE;
+  background: #91D6D3;
 }
-
-.header a {
-  float: right;
-  display: block;
-  color: #277BC0;
-  text-align: center;
-  padding: 14px 16px;
+ 
+ 
+#menu {
+  background-color: transparent;
+  top: 0px;
+}
+ 
+#menu ul {
+  max-width: 100%;
+  list-style: none;
+  display: flex;
+  padding: 0;
+  justify-content: center;
+ 
+}
+ 
+#menu ul li {
+  display: inline;
+}
+ 
+#menu ul li a {
+  color: #000000;
+  padding: 20px;
+  font-size: 25px;
+  display: inline-block;
   text-decoration: none;
-  font-size: 15px;
-  font-weight: bold
+  justify-content: center;
+  border-radius: 25px;
+  transition: background .4s;
 }
-
-.header a:hover {
-  background: #277BC0;
-  color: #FFB200;
+ 
+#menu ul li a:hover {
+  color: #FFF4CF;
+  background-color: rgb(22, 187, 252);
+  border-radius: 25px;
 }
-
-.welcome {
-  background-color: #277BC0;
-  display: block;
+ 
+#menu ul li:last-child a {
+  background-color: rgb(22, 187, 252);
+  color: #FFF4CF;
+  border-radius: 25px;
 }
-
-#img1 {
-  margin: 5px;
-  width: 80px;
-  height: 80px;
-}
-
+ 
+ 
 h1 {
-  animation:tracking-in-expand 1s linear both;
+ 
   font-family: Yellowtail;
-  font-size: 80px;
+  font-size: 100px;
+  font-weight: 300;
   display: flex;
   align-items: center;
   justify-content: center;
-  color: #FFB200;
+  color: #000000;
 }
-
-.welcomeText {
-  font-size: 25px;
-  padding: 10px;
-  margin: 10px;
-  font-weight: bold;
-  color: #FFF4CF;
-  backdrop-filter: blur(14px) saturate(200%);
-    -webkit-backdrop-filter: blur(14px) saturate(200%);
-    background-color: rgba(39, 123, 192, 1);
-    border-radius: 12px;
-    border: 1px solid rgba(209, 213, 219, 0.3);
-}
-
-.homeMenu {
-  display: grid;
-  gap: 10px;
-  grid-template-columns: auto auto auto;
-  padding: 20px;
-  }
-
-.menuText {
-  padding: 20px;
-  font-size: 30px;
-  text-align: center;
-  color: #FFF4CF;
-  backdrop-filter: blur(16px) saturate(180%);
-  -webkit-backdrop-filter: blur(16px) saturate(180%);
-  background-color: rgba(39, 123, 192, 0.75);
-  border-radius: 12px;
-  border: 1px solid rgba(209, 213, 219, 0.3);
-}
-
+ 
 .button {
   background: #FFB200;
   color: #277BC0;
   font-size: 25px;
 }
-
-@media only screen and ( max-width : 900px ) {
-
+ 
+.gallery {
+  display: grid;
+  grid-template-columns: repeat(8, 1fr);
+  grid-template-rows: repeat(8, 5vw);
+  grid-gap: 15px;
+  padding-top: 25em;
 }
-
-
+ 
+.gallery_img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  display: block;
+}
+ 
+ 
+.gallery__item--1 {
+  grid-column-start: 1;
+  grid-column-end: 3;
+  grid-row-start: 1;
+  grid-row-end: 3;
+}
+ 
+.gallery__item--2 {
+  grid-column-start: 3;
+  grid-column-end: 5;
+  grid-row-start: 1;
+  grid-row-end: 3;
+}
+ 
+.gallery__item--3 {
+  grid-column-start: 5;
+  grid-column-end: 9;
+  grid-row-start: 1;
+  grid-row-end: 6;
+}
+ 
+.gallery__item--4 {
+  grid-column-start: 1;
+  grid-column-end: 5;
+  grid-row-start: 3;
+  grid-row-end: 6;
+}
+ 
+.gallery__item--5 {
+  grid-column-start: 1;
+  grid-column-end: 5;
+  grid-row-start: 6;
+  grid-row-end: 9;
+}
+ 
+ 
+@media only screen and ( max-width : 900px ) {
+ 
+}
+ 
+ 
+@keyframes tracking-in-expand{
+  0%{letter-spacing:-.2em;opacity:0}
+  40%{opacity:.6}100%
+  {opacity:1}}
+ 
+ 
+@media only screen and ( max-width : 900px ) {
+ 
+}
+ 
+ 
 @keyframes tracking-in-expand{
   0%{letter-spacing:-.2em;opacity:0}
   40%{opacity:.6}100%
