--- a/home.css
+++ b/home.css
@@ -29,7 +29,7 @@ body {
  
 #menu {
   background-color: transparent;
-  top: 0px;
+  margin-top: 50px;
   overflow: hidden;
   text-decoration: none;
 }
@@ -64,7 +64,7 @@ body {
 }
  
 #menu ul li a:hover {
-  color: #FFF4CF;
+  color: #fffdf5;
   background-color:#020d4b;
   border-radius: 25px;
 }
@@ -90,7 +90,8 @@ h1 {
   grid-template-columns: repeat(8, 1fr);
   grid-template-rows: repeat(8, 5vw);
   grid-gap: 15px;
-  padding-top: 25em;
+  margin-top: 230px;
+  padding: 25px;
 }
  
 .gallery_img {
@@ -143,7 +144,7 @@ h1 {
  
  
 .hometext {
-  background-color: #FFF4CF;
+  background-color: #fffdf5;
   color: #020d4b;
   font-family: Yellowtail;
   font-weight: 600;
@@ -164,14 +165,15 @@ h1 {
 .button {
   font-size: 40px;
   color: #020d4b;
-  background-color: #FFF4CF;
+  padding: 5px;
+  background-color: #fffdf5;
   border: transparent;
   border-radius: 15px;
   box-shadow: 0 1px 1px 0 #020d4b, 0 3px 10px 0 #020d4b;
 }
  
 .button:hover {
-  color: #FFF4CF;
+  color: #fffdf5;
   background-color: #020d4b;
   cursor: pointer;
 }
@@ -182,7 +184,7 @@ h1 {
   align-items: center;
   justify-content: center;
   background-color: #020d4b;
-  color: #FFF4CF;
+  color: #fffdf5;
   font-size: larger;
 }
  
@@ -249,4 +251,3 @@ h1 {
     filter: blur(0px);
   }
 }
- 
