--- a/sobre.css
+++ b/sobre.css
@@ -29,7 +29,7 @@ body {
  
 #menu {
   background-color: transparent;
-  top: 0px;
+  margin-top: 50px;
   overflow: hidden;
   text-decoration: none;
 }
@@ -55,7 +55,7 @@ body {
   font-size: 35px;
   margin: 0px;
   padding: 8px;
-  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
+  box-shadow: 0 8px 1px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
   display: inline-block;
   text-decoration: none;
   justify-content: center;
@@ -64,7 +64,7 @@ body {
 }
  
 #menu ul li a:hover {
-  color: #FFF4CF;
+  color: #fffdf5;
   background-color:#020d4b;
   border-radius: 25px;
 }
@@ -86,7 +86,7 @@ h1 {
 }
  
 .hometext {
-  background-color: #FFF4CF;
+  background-color: #fffdf5;
   color: #020d4b;
   font-family: Yellowtail;
   font-weight: 600;
@@ -97,113 +97,101 @@ h1 {
  
 }
  
-.slide {
-  position: relative;
-  display: block;
-  width: 500px;
-  height: 300px;
-  margin-top: 65px;
-  margin-left: 200px;
-  overflow: hidden;
-  border-radius: 5px;
-}
- 
-.slide:before, .slide:after {
-  content: '⥪';
-  position: absolute;
-  top: 50%;
-  left: 1rem;
-  z-index: 2;
-  width: 2rem;
-  height: 2rem;
-  background: dodgerblue;
-  color: white;
-  border-radius: 50%;
+ .slide {
+  width: 200px;
+  height: 250px;
+  margin-top: 50px;
+  margin-left: 175px;
   display: flex;
-  justify-content: center;
-  align-items: center;
-  pointer-events: none;
-}
- 
-.slide:after {
-  content: '⥭';
-  left: auto;
-  right: 1rem;
-}
- 
-/* I haven't found a way for IE and Edge to let me style inputs that way */
-input {
-  appearance: none;
-  -ms-appearance: none;
-  -webkit-appearance: none;
-  display: block;
-  width: 100%;
-  height: 100%;
-  position: absolute;
+ }
+
+ .slide > img {
   top: 0;
-  left: 0;
-  border-radius: 5px;
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: center;
-  transform: translateX(100%);
-  transition: transform ease-in-out 400ms;
-  z-index: 1;
+  left: calc(50% - 100px);
+  opacity: 0;
+  animation: display 8s infinite;
+}
+
+img:nth-child(2) {
+  animation-delay: 2s;
+}
+img:nth-child(3) {
+  animation-delay: 4s;
+}
+img:nth-child(4) {
+  animation-delay: 6s;
+}
+img:nth-child(5) {
+  animation-delay: 8s;
+}
+
+.text {
+  display: flex;
+  flex-direction: column;
+  background-color: #fffdf5;
+  color: #020d4b;
+  font-family: Yellowtail;
+  font-weight: 600;
+  font-size: 35px;
+  width: auto;
+  padding: 35px;
+  margin-top: 50px;
+ 
+}
+
+#btntext {
+  display: flex;
+  justify-content: space-evenly;
+  margin-top: 25px;
+}
+
+.button {
+  font-size: 40px;
+  color: #020d4b;
+  align-self: center;
+  padding: 5px;
+  background-color: #fffdf5;
+  border: transparent;
+  border-radius: 15px;
+  box-shadow: 0 1px 1px 0 #020d4b, 0 3px 10px 0 #020d4b;
 }
  
-input:focus {
-  outline: none;
+.button:hover {
+  color: #fffdf5;
+  background-color: #020d4b;
+  cursor: pointer;
 }
- 
-input:after {
-  content: attr(title);
-  position: absolute;
-  top: 1rem;
-  left: 1rem;
-  background-color: rgba(0,0,0,0.4);
-  color: white;
-  padding: .5rem;
-  font-size: 1rem;
-  border-radius: 5px;
-}
- 
-input:not(checked):before {
-  content: '';
-  position: absolute;
-  width: 2rem;
-  height: 2rem;
-  border-radius: 50%;
-  top: 50%;
-  left: calc(-100% + 1rem);
-}
- 
-input:checked:before {
-  display: none;
-  left: 1rem;
-}
- 
-input:checked {
-  transform: translateX(0);
-  z-index: 0;
-  box-shadow: -5px 10px 20px -15px rgba(0,0,0,1);
-}
- 
-input:checked + input:before {
-  left: -3rem;
-}
- 
-input:checked + input ~ input:before {
-  display: none;
-}
- 
+
 .footer {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   background-color: #020d4b;
-  color: #FFF4CF;
-  margin-top: 150px;
+  color: #fffdf5;
   font-size: larger;
 }
  
+
+@keyframes display {
+  0% {
+    transform: translateX(200px);
+    opacity: 0;
+  }
+  10% {
+    transform: translateX(0);
+    opacity: 1;
+  }
+  20% {
+    transform: translateX(0);
+    opacity: 1;
+  }
+  30% {
+    transform: translateX(-200px);
+    opacity: 0;
+  }
+  100% {
+    transform: translateX(-200px);
+    opacity: 0;
+  }
+}
